# search_engine_project

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  breakText.cpp  breakText.h  config.json  main.cpp  requests.json  test__file1.txt  test_file2.txt
